Few fixes for navbar, changed categories buttons and alignment.

--- a/diary/static/diary/styles.css
+++ b/diary/static/diary/styles.css
@@ -1,17 +1,17 @@
 /* Styles for note cards */
 
 .work-category {
-    background-color: #31e26c !important;
+    background-color: #45e97c !important;
 }
 
 .stuff-category {
-    background-color: #bfc515 !important;
+    background-color: #f1f754 !important;
 }
 
 .hobbies-category {
-    background-color: #e87df7 !important;
+    background-color: #eb97f7 !important;
 }
 
 .school-category {
-    background-color: #5578eb !important;
+    background-color: #7392f7 !important;
 }
